<resources>
    <string name="app_name">Дневник</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Subjects_add">Предмет</string>
    <string name="AddSubjects_add">Добавить предмет</string>
    <string name="Teacher_add">Учитель</string>
    <string name="Cab_add">Кабинет</string>
    <string name="Dob_add">Описание</string>
    <string name="Add">Добавить</string>
    <string name="Start">Начать</string>
    <string name="_00_00">00:00</string>
    <string name="Time_Work">Время работы</string>
    <string name="Time_Break">Перерыв</string>
    <string name="Error_Sub_Not">Предметы не добавлены. \nДобавить предметы можно через кнопку в меню\'Добавить предмет\'</string>
    <string name="Warning_Delete">Осторожно, действие нельзя отменить.</string>
    <string name="Delete_Sub">Удалить предметы</string>
    <string name="Delet_Ras">Удалить расписание</string>
    <string name="Delet_All">Удалить всё</string>
    <string name="Home_page">Домашняя страница</string>
    <string name="Add_HW">Ввести домашнее задание</string>
    <string name="NomLess_AddRas">Номер урока</string>
    <string name="Add_HW_ST">Добавить\n домашнее задание</string>
    <string name="add_hw_t">Добавить домашнее задание</string>
    <string name="Timer">Таймер Tomato</string>
    <string name="Ras">Расписание</string>
    <string name="Sub">Предметы</string>
    <string name="AddHw">Добавить домашнюю работу</string>
    <string name="AddSub">Добавить предмет</string>
    <string name="AddRass">Добавить расписание</string>
    <string name="Clear">Удалить</string>
    <string name="AddHWToast">Вы успешно добавили домашнее задание</string>
    <string name="AddSubToast">Вы успешно добавили предмет</string>
    <string name="AddSubToastNo">Такой предмет уже есть. Введите другое название.</string>
    <string name="DelSubOne">Удалить предмет</string>
    <string name="DelHWOne">Удалить д/з</string>
    <string name="About">О приложении</string>

</resources>