<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".AddSubFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="211dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bureauap"
        android:text="@string/AddSubjects_add"
        android:textSize="24sp"
        android:textColor="@color/green_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddSubName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Subjects_add"
        android:fontFamily="@font/font1"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/AddSubTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Teacher_add"
        android:fontFamily="@font/font1"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddSubName" />

    <EditText
        android:id="@+id/AddSubCab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/Cab_add"
        android:fontFamily="@font/font1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddSubTeacher" />

    <EditText
        android:id="@+id/AddSubDop"
        android:layout_width="254dp"
        android:layout_height="103dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false"

        android:text=""
        android:hint="@string/Dob_add"
        android:fontFamily="@font/font1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddSubCab" />

    <Button
        android:id="@+id/BtnAddSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/font1"
        android:text="@string/Add"
        android:textSize="18sp"
        android:background="@drawable/buttonshape2"
        android:textColor="@color/green_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddSubDop" />

</androidx.constraintlayout.widget.ConstraintLayout>